--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site settings
-title: Monochrome | A minimal, responsive Jekyll blog theme
-description: "A minimal, responsive, ready to use blog template, built with Jekyll."
-url: "http://www.dyutibarma.github.io/monochrome"
+title: Young-Geun Choi (최영근) | Statistician, PhD
+description: "Young-Geun Choi"
+url: "https://younggeunchoi.github.io/monochrome"
 author:
-  name: "The Review Index"
-  email: "dyutibarma@gmail.com"
-  url: "https://thereviewindex.com"
+  name: "Young-Geun Choi"
+  email: "eumjangi@gmail.com"
+  url: "https://younggeunchoi.github.io"
 
 # Build settings
-baseurl: /monochrome # Change this to your relative path (ex: /blog/), or leave just a /
+baseurl: / # Change this to your relative path (ex: /blog/), or leave just a /
 markdown: kramdown
 source: .
 destination: ./_site
@@ -31,7 +31,7 @@ gems:
   - jekyll-sitemap
 
 # Custom variables
-version: "1.0.0"
+version: "0.1.0"
 
 # Options
 custom_header: false
