--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Young-Geun Choi (최영근) | Statistician, PhD
 description: "Young-Geun Choi"
-url: "https://younggeunchoi.github.io/monochrome"
+url: "/"
 author:
   name: "Young-Geun Choi"
   email: "eumjangi@gmail.com"
